<resources>
    <string name="app_name">Bitki Sulama</string>
    <string name="made">made by nyaex</string>
    <string name="app_name_version">Bitki Sulama 1.6</string>
    <string name="github">Github</string>
    <string name="share">Paylaş</string>
    <string name="search_device">Cihazları Bul</string>
    <string name="manuel_sulama">MANUEL SULAMA</string>
    <string name="baglantiyi_kes">BAĞLANTIYI KES</string>
    <string name="activity_main_header">Cihaz Seçim Menüsü</string>
    <string name="logo">logo</string>
    <string name="yonetim_paneli">Yönetim Paneli</string>
    <string name="about_info"><![CDATA[Uygulamanın düzgün çalışması için Ayarlar > Uygulamalar > Bitki Sulama > İzinler bölümünden Bluetooth ve Konum izinlerini vermeniz gerekebilir. Ayrıca, cihazları bulmadan önce Bluetooth kartınıza bağlı olduğunuzdan emin olun.]]></string>
</resources>
